infra/k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: quess
  labels:
    app: quess
    environment: production
