infra/k8s/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quess-backend
  namespace: quess
spec:
  replicas: 1
  selector:
    matchLabels:
      app: quess-backend
  template:
    metadata:
      labels:
        app: quess-backend
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: backend
          image: ghcr.io/samiryassine/quess-backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 9000
---
apiVersion: v1
kind: Service
metadata:
  name: quess-backend
  namespace: quess
spec:
  selector:
    app: quess-backend
  ports:
    - port: 9000
      targetPort: 9000
