infra/k8s/frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quess-frontend
  namespace: quess
spec:
  replicas: 1
  selector:
    matchLabels:
      app: quess-frontend
  template:
    metadata:
      labels:
        app: quess-frontend
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: frontend
          image: ghcr.io/samiryassine/quess-frontend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: quess-frontend
  namespace: quess
spec:
  selector:
    app: quess-frontend
  ports:
    - port: 80
      targetPort: 80
