infra/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: quess-ingress
  namespace: quess
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
    - host: quess.141.147.6.140.nip.io
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: quess-nginx
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: quess-frontend
                port:
                  number: 80
